# Digital-FTE

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/skills/calendar-event/: SKILL.md
.claude/skills/ceo-briefing/: SKILL.md
.specify/memory/: constitution.md
deploy/: docker-compose.odoo.yml  install-gold.sh  install-silver.sh  install.sh  uninstall-silver.sh  uninstall.sh
history/adr/: 0001-silver-tier-service-topology-three-separate-systemd-services.md  0002-whatsapp-integration-whatsapp-web-js-over-playwright-and-baileys.md  0003-local-mcp-servers-for-gmail-and-calendar-over-cloud-relay.md  0004-action-execution-via-claude-subprocess-with-constrained-tool-access.md
scripts/: oauth_setup.py  ralph-loop.sh
specs/001-bronze-vault-setup/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-systemd-daemon-setup/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-silver-functional-assistant/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-gold-autonomous-employee/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/fte/: __init__.py  cli.py  executor.py  gmail_watcher.py  linkedin_auth.py  lockfile.py  logger.py  orchestrator.py  ralph_loop.py  vault.py  watcher.py
tests/: conftest.py  test_lockfile.py  test_logger.py  test_orchestrator.py  test_vault.py  test_watcher.py
tests/integration/: test_gold_chain.py  test_ralph_loop_e2e.py
tests/unit/: test_odoo_actions.py  test_ralph_loop.py
(+79 files in other folders)
